workshop4/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wp-ing
  labels:
    name: wp-ing
    tier: ingress
spec:
  ingressClassName : nginx
  rules:
  - host: wp-144.126.241.80.nip.io
    http:
      paths: 
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: workpress-client-1-service
            port:
              number: 8080
